--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola,este es mi sitio web 
+        hola amigo,este es mi sitio web 
         sigueme en instagram @jagueraa
     </p>
 </body>
